--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   url_launcher: ^6.0.12
   webview_flutter: ^4.2.1
   intl: ^0.20.1
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
