--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
         android:label="shetimitra"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCTgHZvPL3gT-PBneyp_3EvTboqhClPWNQ"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -33,6 +37,7 @@
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
   <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> -->
     
     
