--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   webview_flutter: ^4.2.1
   intl: ^0.20.1
   flutter_svg: ^2.0.17
+  google_maps_flutter: ^2.10.1
+  flutter_speed_dial: ^7.0.0
+  share_plus: ^10.1.4
+  screenshot: ^3.0.0
 
 dev_dependencies:
   flutter_test:
